force-app/main/default/objects/Invoice_Line__c/fields/Invoice_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_External_Id__c</fullName>
    <label>Invoice External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>