force-app/main/default/objects/Invoice_Line__c/fields/Is_Synced__c.field-meta.xml
<CustomField>
    <fullName>Is_Synced__c</fullName>
    <label>Is Synced?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>