force-app/main/default/objects/Invoice_Line__c/fields/Is_Taxable__c.field-meta.xml
<CustomField>
    <fullName>Is_Taxable__c</fullName>
    <label>Is Taxable?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>