force-app/main/default/objects/Invoice_Line__c/fields/Product_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_External_Id__c</fullName>
    <formula>Product__r.ExternalId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product External Id</label>
    <type>Text</type>
</CustomField>